--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,4 @@
-\renewcommand{\abstractnamefont}{\normalfont\LARGE\bfseries}
-%\renewcommand{\abstracttextfont}{\normalfont\Huge}
-
-
-%inclusion d'une mage dans le document
-
+\chapter*{Abstract}
 
 
 ICI C'est l'abstract
