liste des tableaux

--- a/Chapitre1.tex
+++ b/Chapitre1.tex
@@ -24,13 +24,9 @@ Pour cela on propose les utilisateurs suivants :
 \end{itemize}
  
 
- 
-
- 
-
- 
 
 \subsection{Acteurs du système}
+ 
 
 \begin{longtable}{ |l|l|l| }
 \hline
@@ -86,7 +82,8 @@ Utilisateur  & Attributs \\ \hline
 & Adresse \\
 & Mot de passe \\  \hline
  
- 
+\caption{Acteurs du système.}
+\label{table:acteurs}
 
 \end{longtable}
 
@@ -94,7 +91,8 @@ Utilisateur  & Attributs \\ \hline
 
 \subsection{Données manipulées dans le système}
 
-\begin{center}
+\begin{table}[h]
+\centering
 
 \begin{tabular}{|ll|c|lll}
 \cline{1-3}
@@ -108,8 +106,12 @@ Utilisateur  & Attributs \\ \hline
 \multicolumn{1}{|c}{}                                     & \multicolumn{1}{c|}{} & Autres                                                                                                                  &  &  &  \\ \cline{1-3}
 \end{tabular}
 
+\caption{Données manipulées.}
+\label{table:données}
 
-\end{center}
+\end{table}
+
+
 
 
 \subsection{Droits d’accès}
