--- a/main.tex
+++ b/main.tex
@@ -109,6 +109,8 @@ pdfstartview={FitH}}					% ajuste la page à la largueur de l'écran
 \thispagestyle{empty}
 \listoffigures
 \thispagestyle{empty}
+\listoftables
+\thispagestyle{empty}
 \tableofcontents
 \thispagestyle{empty}
 
