suppression de fichiers

--- a/title.tex
+++ b/title.tex
@@ -21,7 +21,7 @@
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Réalisé par :}\\
-Hamza \textsc{EL MRABTI}\\
+Hamza \textsc{El Mrabti}\\
 Yahya \textsc{Benzha}\\ [1cm]
 
 \emph{Filière :} \\
