--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -18,7 +18,7 @@
 \begin{center}
 \includegraphics[height=8cm,width=18cm]{usecasediag.png}
 \end{center}
-\caption{Dossier medical du patient}
+\caption{Diagrame de use case}
 \end{figure}
 
 \subsection{Diagrame de classe}
@@ -27,7 +27,7 @@
 \begin{center}
 \includegraphics[height=10cm,width=18cm]{classdiag.png}
 \end{center}
-\caption{Dossier medical du patient}
+\caption{Diagrame de classe}
 \end{figure}
 
 \section{Dictionnaire de données}
