--- a/Dedicaces.tex
+++ b/Dedicaces.tex
@@ -1,3 +1,19 @@
-ici les dedicaces
+\chapter*{Dédicaces}
 
-\newpage
+\vspace*{\stretch{0.5}}
+\begin{flushright}
+\emph{\`A ma famille, à mes amis, à tous ceux qui me sont chèrs } \\
+\textsc{Hamza El Mrabti}\\
+\end{flushright}
+
+\vspace*{\stretch{0.2}}
+
+\begin{flushright}
+\emph{\`A ma famille, à mes amis, à tous ceux qui me sont chèrs } \\
+\textsc{Yahya Benzha}\\
+\end{flushright}
+
+\vspace*{\stretch{1}}
+
+
+
