--- a/main.tex
+++ b/main.tex
@@ -102,7 +102,7 @@ pdfstartview={FitH}}					% ajuste la page à la largueur de l'écran
 %\thispagestyle{empty}
 \input{./Dedicaces.tex}
 \thispagestyle{empty}
-%\input{./Remerciements.tex}
+\input{./Remerciements.tex}
 \thispagestyle{empty}
 \input{./Resume.tex}
 \thispagestyle{empty}
