--- a/Remerciements.tex
+++ b/Remerciements.tex
@@ -1,12 +1,8 @@
-\newenvironment*{remerciements}{%
-\renewcommand*{\abstractname}{Remerciements}
-\begin{abstract}
-}{\end{abstract}}
+
+\chapter*{Remerciements}
 
 
 
-
-\begin{remerciements}
 \begin{center}
 ``La reconnaissance est la plus belle fleur qui jaillit de l'âme "
 \end{center}
@@ -20,5 +16,4 @@ Ensuite nous exprimons notre profonde reconnaissance aux membres
 du jury, pour le temps précieux qu'ils accordent volontairement en contribuant au bon déroulement du module.
 
 Enfin nous tenons à remercier chaleureusement nos familles, nos amis et toutes les personnes qui ont contribué énormément à la réalisation de notre projet et qui nous ont aidés lors de la rédaction de ce rapport, aussi bien pour leurs encouragements et soutiens dans les moments forts.
-\end{remerciements}
 
