--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -2,7 +2,7 @@
 
 \section{Introduction}
 
-Après avoir achevé l’étape d’analyse et conception de l’application, on va entamer dans ce chapitre la partie réalisation et implémentation dans laquelle on va s’assurer que le système est prêt pour être exploité par les utilisateurs finaux.
+Après avoir achevé l’étape d’analyse et conception de l’application, on va entamer dans ce chapitre la partie réalisation et implémentation dans laquelle on va s’assurer que le système est prêt pour être exploité par les utilisateurs finaux. Premièrement on choisit les technologies et puis on procède à la réalisation.
 
 
 \section{Choix des technologies}
@@ -56,6 +56,21 @@ Apache Cassandra est un système de gestion de base de données (SGBD) de type N
 \caption{Cassandra}
 \end{figure}
 
+
+\subsection{Tailwind CSS}
+
+Tailwind CSS est un framework utility-fist CSS (feuilles de style en cascade) avec des classes prédéfinies que vous pouvez utiliser pour construire et concevoir des pages web directement dans votre balisage. Il vous permet d’écrire du CSS dans votre HTML sous la forme de classes prédéfinies.
+
+\begin{figure}[!h]
+\begin{center}
+\includegraphics[height=5cm]{tailwindcss.png}
+\end{center}
+\caption{Tailwind CSS}
+\end{figure}
+
+
+
+
 \subsection{Latex}
 
 LaTeX (dont le logo est \LaTeX) est un langage et un système de composition de documents. Il s'agit d'une collection de macro-commandes destinées à faciliter l'utilisation du « processeur de texte » TeX de Donald Knuth.
@@ -77,9 +92,46 @@ Les fonctionnalités incluent la prise en charge du débogage, la mise en évide
 
 \begin{figure}[!h]
 \begin{center}
-\includegraphics[height=6cm]{vscode.svg.png}
+\includegraphics[height=5cm]{vscode.svg.png}
 \end{center}
 \caption{vscode}
+\end{figure}
+
+
+\subsection{Strapi}
+
+Strapi est un CMS (Content Management System) en open source qui aide les entreprises à concevoir des architectures personnalisées en vue d'assister les développeurs, responsables et équipes dans la création et la gestion de contenus pour les projets d'applications mobiles et de sites web. La plateforme prend plusieurs bases de données en charge (notamment MongoDB, MySQL, SQLite et Postgres) afin de favoriser l'échange d'informations entre différentes sources de données.
+
+\begin{figure}[!h]
+\begin{center}
+\includegraphics[height=6cm]{strapi.png}
+\end{center}
+\caption{Strapi}
+\end{figure}
+
+
+\subsection{Vercel}
+
+Vercel (anciennement connu sous le nom de ZEIT) est une plate-forme cloud qui permet aux développeurs d'héberger des sites Web et des services Web qui se déploient instantanément, évoluent automatiquement et ne nécessitent aucune supervision.
+
+\begin{figure}[!h]
+\begin{center}
+\includegraphics[height=6cm]{vercel.png}
+\end{center}
+\caption{Vercel}
+\end{figure}
+
+
+\subsection{Heroku}
+
+Heroku est une plate-forme cloud en tant que service (PaaS) prenant en charge plusieurs langages de programmation. L'une des premières plates-formes cloud, Heroku est en développement depuis juin 2007, lorsqu'elle ne prenait en charge que le langage de programmation Ruby, mais prend désormais en charge Java, Node.js, Scala, Clojure, Python, PHP et Go.[3] Pour cette raison, Heroku est considéré comme une plate-forme polyglotte car il dispose de fonctionnalités permettant à un développeur de créer, d'exécuter et de mettre à l'échelle des applications de la même manière dans la plupart des langages.
+
+
+\begin{figure}[!h]
+\begin{center}
+\includegraphics[height=3cm]{heroku.svg.png}
+\end{center}
+\caption{Heroku}
 \end{figure}
 
 
@@ -126,8 +178,6 @@ Le dossier médical du patient contient les dernières actions faites par le pat
 
 
 
-
-
-
-
 \section{Conclusion}
+La terminaison de cette étape marque la fin de notre projet, il reste à voir le résultat réél de ce projet et en tirer des conclusion, et puis voir des amélioration possible en guise de perspective.
+
