--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -27,7 +27,7 @@ Le framework permet de créer des applications web universelles ou parfois appel
 
 \begin{figure}[!h]
 \begin{center}
-\includegraphics[height=8cm]{Nextjs.svg.png}
+\includegraphics[height=6cm]{Nextjs.svg.png}
 \end{center}
 \caption{NEXT.JS}
 \end{figure}
@@ -92,7 +92,7 @@ Les fonctionnalités incluent la prise en charge du débogage, la mise en évide
 
 \begin{figure}[!h]
 \begin{center}
-\includegraphics[height=5cm]{vscode.svg.png}
+\includegraphics[height=4cm]{vscode.svg.png}
 \end{center}
 \caption{vscode}
 \end{figure}
@@ -139,8 +139,7 @@ Heroku est une plate-forme cloud en tant que service (PaaS) prenant en charge pl
 
 \subsection{Page de login}
 
-Page de login 
-
+Page de login pour s'authentifier comme utilisateur du système
 \begin{figure}[!h]
 \begin{center}
 \includegraphics[height=10cm]{log.png}
@@ -153,10 +152,13 @@ Page de login
 
 le profile du patient contient ses informations personnelles.
 
+\newpage
+
+
 \begin{figure}[!h]
 \centering
 \begin{center}
-\includegraphics[height=10cm,width=18cm]{gen.png}
+\includegraphics[height=10cm,width=18cm]{profile.jpeg}
 \end{center}
 \caption{Profile du patient}
 \end{figure}
@@ -173,11 +175,41 @@ Le dossier médical du patient contient les dernières actions faites par le pat
 \caption{Dossier medical du patient}
 \end{figure}
 
+\subsection{Page d'inscription}
 
+\begin{figure}[!h]
+\begin{center}
+\includegraphics[height=8cm,width=18cm]{reg.png}
+\end{center}
+\caption{Page d'inscription}
+\end{figure}
+
+\newpage
+
+\subsection{Page de recherche}
+
+\begin{figure}[!h]
+\begin{center}
+\includegraphics[height=8cm,width=18cm]{search.jpeg}
+\end{center}
+\caption{Page de recherche}
+\end{figure}
+
+
+\subsection{Interface d'ajout des patients pour l'admin}
+
+\newpage
+
+\begin{figure}[!h]
+\begin{center}
+\includegraphics[height=8cm,width=18cm]{backadmin.jpeg}
+\end{center}
+\caption{ajout des patients pour l'admin}
+\end{figure}
 
 
 
 
 \section{Conclusion}
-La terminaison de cette étape marque la fin de notre projet, il reste à voir le résultat réél de ce projet et en tirer des conclusion, et puis voir des amélioration possible en guise de perspective.
+La terminaison de cette étape marque la fin de notre projet, il reste à voir le résultat réél de ce projet et en tirer des conclusions, et puis voir des améliorations possible en guise de perspective.
 
