--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -1,21 +1,88 @@
-@misc{cite0,
-	author = {Lexbook},
-    title = {Mancala},
-   	howpublished = {\url{<http://lexbook.net/en/mancala>}},
-    year = 2015,
-   
-}
+
 
 @misc{cite1,
 	
-   	howpublished = {\url{<https://www.libsdl.org/>}},
-    year = 2020,
-    note = "[Online; accessed 16-January-2020]"
+   	howpublished = {\url{<https://nodejs.org/en/docs/>}},
+    year = 2022,
+    note = "[Online]"
 }
 
 @misc{cite2,
-
-   	howpublished = {\url{<https://www.overleaf.com/project>}},
-    year = 2020,
-    note = "[Online; accessed 18-January-2020]"
+	
+   	howpublished = {\url{<https://www.postgresql.org/docs/>}},
+    year = 2022,
+    note = "[Online]"
 }
+
+@misc{cite3,
+	
+   	howpublished = {\url{<https://v2.tailwindcss.com/docs>}},
+    year = 2022,
+    note = "[Online]"
+}
+
+
+@misc{cite4,
+	
+   	howpublished = {\url{<https://www.uml.org/>}},
+    year = 2022,
+    note = "[Online]"
+}
+
+
+@misc{cite5,
+	
+   	howpublished = {\url{<https://fr.wikipedia.org/wiki/Next.js>}},
+    year = 2022,
+    note = "[Online]"
+}
+
+@misc{cite6,
+	
+   	howpublished = {\url{<https://nextjs.org/docs>}},
+    year = 2022,
+    note = "[Online]"
+}
+
+@misc{cite7,
+	
+   	howpublished = {\url{<https://fr.wikipedia.org/wiki/Cassandra_(base_de_donn%C3%A9es)>}},
+    year = 2022,
+    note = "[Online]"
+}
+
+@misc{cite8,
+	
+   	howpublished = {\url{<https://docs.strapi.io/developer-docs/latest/getting-started/introduction.html>}},
+    year =2022,
+    note = "[Online]"
+}
+
+@misc{cite9,
+	
+   	howpublished = {\url{<https://www.oracle.com/fr/database/definition-postgresql.html>}},
+    year = 2022,
+    note = "[Online]"
+}
+
+@misc{cite10,
+	
+   	howpublished = {\url{<https://developer.mozilla.org/fr/docs/Web/JavaScript>}},
+    year = 2022,
+    note = "[Online]"
+}
+
+@misc{cite11,
+	
+   	howpublished = {\url{<https://fr.wikipedia.org/wiki/Visual_Studio_Code>}},
+    year = 2022,
+    note = "[Online]"
+}
+
+
+
+
+
+
+
+
